# ComfyUI-Power-Artist-Loader

./: LICENSE  README.md  __init__.py  artists.csv  nodes.py  pyproject.toml  readme.md  readme_md.md
.github/workflows/: publish.yml
db/: artists.json
examples/: Power Artist Random.json  Power Artist loader.json
ui/: package-lock.json  package.json  vite.config.js
ui/src/: ArtistManager.tsx  main.tsx  styles.css
web/js/: artist-manager-enhanced.js  artist-manager-ui.js  power_artist_loader.js
zh-CN/: ComfyUI-Power-Artist-Loader.json
