[project]
name = "comfyui-power-artist-loader"
description = "Artist style cue word manager, customize add and manage artist tags"
version = "1.0.0"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/hanL34/ComfyUI-Power-Artist-Loader"

[tool.comfy]
Publisher = "hanl34"
PublisherId = "hanl34"
DisplayName = "hanL34"
Icon = ""
